<resources>

    <string name="app_name">Russian Checkers</string>
    <string name="new_computer_game">New Game vs Computer</string>
    <string name="new_human_game">New Game vs Human</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_chess_board">Game Board</string>
    <string name="title_activity_settings">Settings</string>
    <string name="save_text">Save</string>
    <string name="difficulty_text">Difficulty:</string>
    <string name="low_level">Low</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard:</string>

</resources>
